<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.uc3m.dresser.ui.home.HomeFragment"
        android:icon="@drawable/ic_sweater"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_elegirOutfitFragment"
            app:destination="@id/elegirOutfitFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.uc3m.dresser.ui.dashboard.DashboardFragment"
        android:icon="@drawable/ic_sweater"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.uc3m.dresser.ui.notifications.NotificationsFragment"
        android:icon="@drawable/ic_sweater"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_listaFragment"
            app:destination="@id/listaFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_historialFragment"
            app:destination="@id/historialFragment" />
    </fragment>


    <fragment
        android:id="@+id/ropaFragment"
        android:name="com.uc3m.dresser.ui.ropa.RopaFragment"
        android:icon="@drawable/ic_sweater"
        android:label="Modificar Prenda"
        tools:layout="@layout/fragment_ropa">
        <action
            android:id="@+id/action_ropaFragment_to_listaFragment"
            app:destination="@id/listaFragment" />
    </fragment>
    <fragment
        android:id="@+id/listaFragment"
        android:name="com.uc3m.dresser.ui.list.ListaFragment"
        android:icon="@drawable/ic_sweater"
        android:label="Prendas"
        tools:layout="@layout/fragment_lista">
        <action
            android:id="@+id/action_listaFragment_to_ropaFragment"
            app:destination="@id/ropaFragment" />
        <action
            android:id="@+id/action_listaFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/historialFragment"
        android:name="com.uc3m.dresser.ui.historial.HistorialFragment"
        android:icon="@drawable/ic_sweater"
        android:label="Historial"
        tools:layout="@layout/fragment_historial" >
        <action
            android:id="@+id/action_historialFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/elegirOutfitFragment"
        android:name="com.uc3m.dresser.ui.elegiroutfit.ElegirOutfitFragment"
        android:icon="@drawable/ic_sweater"
        android:label="Elige Outfit"
        tools:layout="@layout/fragment_elegir_outfit" >
        <action
            android:id="@+id/action_elegirOutfitFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>


</navigation>